# RummyCube

./: .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Readme.md  RummyCubeTest.launch
i18n/: de.po
src/: CMakeLists.txt  Internationalization.cpp  Internationalization.h  Main.cpp  Main.h
src/game/: CMakeLists.txt  CountdownTimer.cpp  CountdownTimer.h  RummyCube.cpp  RummyCube.h  RummyCubeNetwork.cpp  RummyCubeNetwork.h  Settings.cpp  Settings.h
src/game/player/: AIPlayer.cpp  AIPlayer.h  CMakeLists.txt  HumanPlayer.cpp  HumanPlayer.h  HumanPlayerClient.cpp  HumanPlayerClient.h  HumanPlayerServer.cpp  HumanPlayerServer.h  NetworkPlayer.cpp  NetworkPlayer.h  NetworkPlayerClient.cpp  NetworkPlayerClient.h  OpponentPlayer.cpp  OpponentPlayer.h  Player.cpp  Player.h
src/game/stones/: CMakeLists.txt  Gamestone.cpp  Gamestone.h  Joker.cpp  Joker.h  ParentChangedEvent.cpp  ParentChangedEvent.h  StoneManager.cpp  StoneManager.h
src/gui/: AboutWindow.cpp  AboutWindow.h  CMakeLists.txt  CreateNetworkGameWindow.cpp  CreateNetworkGameWindow.h  ImagePanel.cpp  ImagePanel.h  JoinNetworkGameWindow.cpp  JoinNetworkGameWindow.h  MainWindow.cpp  MainWindow.h  PropertiesWindow.cpp  PropertiesWindow.h  TutorialWindow.cpp  TutorialWindow.h
src/gui/resources/: gameboard.xpm  hand.xpm  holder.xpm  icon.xpm  joker.xpm
src/gui/resources/msw/: RummyCube.rc
src/main/: CMakeLists.txt  Main.cpp  Version.h.in
src/main/game/: CMakeLists.txt  CountdownTimer.cpp  CountdownTimer.h  RummyCube.cpp  RummyCube.h  RummyCubeNetwork.cpp  RummyCubeNetwork.h  Settings.cpp  Settings.h
src/main/game/player/: AIPlayer.cpp  AIPlayer.h  CMakeLists.txt  HumanPlayer.cpp  HumanPlayer.h  HumanPlayerClient.cpp  HumanPlayerClient.h  HumanPlayerServer.cpp  HumanPlayerServer.h  NetworkPlayer.cpp  NetworkPlayer.h  NetworkPlayerClient.cpp  NetworkPlayerClient.h  NetworkPlayerServer.cpp  NetworkPlayerServer.h  OpponentPlayer.cpp  OpponentPlayer.h  Player.cpp  Player.h
src/main/game/stones/: CMakeLists.txt  Gamestone.cpp  Gamestone.h  Joker.cpp  Joker.h  ParentChangedEvent.cpp  ParentChangedEvent.h  StoneManager.cpp  StoneManager.h
src/main/gui/: AboutWindow.cpp  AboutWindow.h  AboutWindow.ui  CMakeLists.txt  CreateNetworkGameWindow.cpp  CreateNetworkGameWindow.h  CreateNetworkGameWindow.ui  ImagePanel.cpp  ImagePanel.h  JoinNetworkGameWindow.cpp  JoinNetworkGameWindow.h  JoinNetworkGameWindow.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  SettingsWindow.cpp  SettingsWindow.h  SettingsWindow.ui  Tutorial.cpp  Tutorial.h  Tutorial.ui
src/main/gui/animations/: Animation.cpp  Animation.h  CMakeLists.txt  DisplayJoker.cpp  DisplayJoker.h  ElementBlinker.cpp  ElementBlinker.h  SameColorIncrementingNumber.cpp  SameColorIncrementingNumber.h  SameColorIncrementingNumberJoker.cpp  SameColorIncrementingNumberJoker.h  SameNumberDifferentColor.cpp  SameNumberDifferentColor.h  SameNumberDifferentColorJoker.cpp  SameNumberDifferentColorJoker.h  StoneMover.cpp  StoneMover.h
src/main/gui/resources/: RummyCube.qrc  gameboard.xpm  hand.xpm  holder.xpm  icon.xpm
src/main/gui/resources/msw/: RummyCube.aps  RummyCube.rc
src/main/i18n/: CMakeLists.txt  Internationalization.cpp  Internationalization.h  RummyCube_de.ts  update.bat  update.sh
src/main/network/: CMakeLists.txt  Network.cpp  Network.h  NetworkGameSettings.h
src/network/: CMakeLists.txt  Network.cpp  Network.h  NetworkEventHandlerClient.cpp  NetworkEventHandlerClient.h  NetworkGameClosedEvent.cpp  NetworkGameClosedEvent.h  NetworkGameSettings.h
src/test/: CMakeLists.txt
src/test/game/: CMakeLists.txt  GameLoadingTest.cpp  GameLoadingTest.h  GameSavingTest.cpp  GameSavingTest.h
src/test/game/player/: AIPlayerTest.cpp  AIPlayerTest.h  CMakeLists.txt
src/test/game/stones/: CMakeLists.txt  GamestoneDragNDropTest.cpp  GamestoneDragNDropTest.h  GamestoneTest.cpp  GamestoneTest.h  JokerDragNDropTest.cpp  JokerDragNDropTest.h  JokerTest.cpp  JokerTest.h  StoneManagerTest.cpp  StoneManagerTest.h
src/test/gui/: AboutWindowTest.cpp  AboutWindowTest.h  CMakeLists.txt
src/test/network/: CMakeLists.txt  NetworkTest.cpp  NetworkTest.h  NetworkTransmissionTest.cpp  NetworkTransmissionTest.h
src/test/resources/savegames/: Test_Before_First_Round.rcs  Test_First_Round_No_Connected_Stones.rcs  Test_First_Round_Stones_Connected.rcs  Test_NoJokerTag.rcs  Test_NoOldSettingsTag.rcs  Test_NoOtherStonesTag.rcs  Test_NoPlayerTag.rcs  Test_NoSettingsTag.rcs  Test_NoStoneTag.rcs  Test_NoStoneTagWithinJoker.rcs  Test_NoStoneTagWithinPlayer.rcs  Test_User_Has_Joker.rcs
tests/: CMakeLists.txt  Main.cpp
tests/game/: CMakeLists.txt  NetworkGameTests.cpp
tests/game/stones/: CMakeLists.txt  StoneManagerTests.cpp
tests/utils/: CMakeLists.txt  DummyApp.cpp  DummyApp.h  utils.cpp
